get recipe list from firestore

--- a/app/src/main/res/layout/recipe_item_menu.xml
+++ b/app/src/main/res/layout/recipe_item_menu.xml
@@ -7,7 +7,7 @@
 
     <ImageView
         android:id="@+id/recipe_image"
-        android:layout_width="100dp"
+        android:layout_width="match_parent"
         android:layout_height="100dp"
         android:src="@mipmap/ic_launcher"/>
 
